<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AttendeeUpdatePhotoDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded"
    android:textAlignment="textStart">

    <Button
        android:id="@+id/AttendeeUpdatePhotoEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/accentColorGreen"
        android:includeFontPadding="false"
        android:paddingRight="24dp"
        android:text="@string/edit_photo"
        android:textColor="@color/lightColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AttendeeUpdatePhotoDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/accentColorRed"
        android:text="@string/delete_photo"
        android:textColor="@color/lightColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/AttendeeUpdatePhotoCloseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AttendeeUpdatePhotoEditButton" />

    <Button
        android:id="@+id/AttendeeUpdatePhotoCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/accentColorYellow"
        android:shadowColor="@color/darkColor"
        android:text="@string/close"
        android:textColor="@color/darkColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>