<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/organizer_gradient"
    tools:context=".uiReference.organizers.OrganizerEventDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/organizer_details_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:contentDescription="Back Button"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/org_event_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/event_name"
                android:textColor="@color/darkColor"
                android:textSize="40sp" />
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/org_event_details_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedCornersTop" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/rectangle_back"
                android:layout_width="wrap_content"
                android:layout_height="645dp"
                android:background="@color/lightColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="305dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_border">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/org_event_details_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/event_location"
                            android:textColor="@color/darkColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.052"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.208" />

                        <TextView
                            android:id="@+id/org_event_details_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/event_date"
                            android:textColor="@color/darkColor"
                            app:layout_constraintBottom_toTopOf="@+id/org_event_details_location"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.047"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/verifed_attendees"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/num_of_verified_attendees"
                            android:textColor="@color/darkColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.051"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/org_event_details_location"
                            app:layout_constraintVertical_bias="0.217" />

                        <TextView
                            android:id="@+id/total_attendees"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/num_of_total_attendees"
                            android:textColor="@color/darkColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.051"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/verifed_attendees"
                            app:layout_constraintVertical_bias="0.132" />

                        <Button
                            android:id="@+id/event_attendees_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/accentColorGreen"
                            android:text="@string/view_attendees_button"
                            android:textColor="@color/lightColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.497"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.715" />

                        <Button
                            android:id="@+id/view_qr_code_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/accentColorGreen"
                            android:text="@string/view_check_in_qr_code_button"
                            android:textColor="@color/lightColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.518"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.937" />

                        <TextView
                            android:id="@+id/org_register_event_details"
                            android:layout_width="169dp"
                            android:layout_height="wrap_content"
                            android:text="@string/event_details"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.92"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.116" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_extrabold"
                        android:gravity="center_horizontal"
                        android:text="MILESTONES"
                        android:textColor="@color/darkColor"
                        android:textSize="30sp" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@color/transparent"
                        android:contentDescription="Milestone button"
                        android:paddingStart="10dp"
                        app:srcCompat="@drawable/milestones" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/milestone_check" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_border">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/org_send_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/accentColorGreen"
                            android:text="SEND"
                            android:textColor="@color/lightColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.955"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.95" />

                        <EditText
                            android:id="@+id/notification_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="start|top"
                            android:hint="Send Message to Attendees..."
                            android:inputType="textMultiLine"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.132"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.638" />

                        <EditText
                            android:id="@+id/notification_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@string/title_of_notification"
                            app:layout_constraintBottom_toTopOf="@+id/notification_details"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.132"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.363" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</ScrollView>